# mainframe-brain

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  llms-full.txt  llms.txt  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  MIGRATIONS.md  SCHEMA.md
examples/cics_bms/: MENU01.bms
examples/cobol/: ACCTFLDS.cpy  INTCALC01.cbl
examples/db2/: schema.ddl
examples/jcl/: PAYRUN.jcl
examples/vsam/: VSMAPP01.cbl
mainframe_brain/: __init__.py  cli.py
mainframe_brain/analytics/: __init__.py  graph_intelligence.py
mainframe_brain/cli/: __init__.py  __main__.py  _common.py
mainframe_brain/cli/commands/: build.py  build_graph.py  enrich.py  explore.py  extract.py  generate_skills.py  impact.py  list_nodes.py  query.py  (+2 more)
mainframe_brain/enrichment/: __init__.py  cache.py  enricher.py  queue.py
mainframe_brain/extractors/: base.py
mainframe_brain/graph/: __init__.py  schema.py  sqlite_store.py  store.py
mainframe_brain/redaction/: __init__.py
mainframe_brain/skills/: SKILL.md  __init__.py  copybook.py  dependency.py  historian.py  migration.py  orchestrator.py  patterns.py  risk_report.py  test_suggest.py  workflow.py
mainframe_brain/triage/: __init__.py  dedup.py  diff.py  queue.py  risk.py
tests/golden/: test_cics_bms_golden.py  test_cobol_golden.py  test_copybook_replacing_golden.py  test_db2_golden.py  test_jcl_golden.py  test_partial_parse_golden.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_call_chain.py  test_cics_bms_extractor.py  test_cli_low_confidence.py  test_cli_workflow.py  test_cobol_extractor.py  test_copybook_extractor.py  test_cross_extractor_ownership.py  test_db2_ddl_extractor.py  test_enrichment.py  test_jcl_extractor.py  test_sql_pl_extractor.py  test_sqlite_store.py  test_trigger_extractor.py  test_vsam_extractor.py
(+21 files in other folders)
