[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mainframe-brain"
version = "0.1.0"
description = "Open-source, model-agnostic knowledge system for legacy mainframe applications"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Sankalp Singh" }]
requires-python = ">=3.10"
keywords = ["mainframe", "cobol", "db2", "jcl", "cics", "knowledge-graph", "llm", "legacy-modernization"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Intended Audience :: Developers",
]

dependencies = [
    "click>=8.1",
    "pydantic>=2.5",
    "jinja2>=3.1",
]

[project.urls]
Homepage = "https://github.com/imsankz/mainframe-brain"
Issues = "https://github.com/imsankz/mainframe-brain/issues"
Changelog = "https://github.com/imsankz/mainframe-brain/blob/main/CHANGELOG.md"
Source = "https://github.com/imsankz/mainframe-brain"

[project.optional-dependencies]
graph = ["kuzu>=0.4"]
viz = ["mermaid-py>=0.5"]
llm = ["anthropic>=0.40", "openai>=1.40"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
mainframe-brain = "mainframe_brain.cli:cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"